[package]
name = "nesilk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nesilk"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "nesilk_lib"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = { version = "0.1.1", optional = true }
pixels = "0.13.0"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8.5" }
rodio = "0.17.3"
serde_json = "1.0"
wasm-bindgen = "0.2"
winit = { version = "0.29.15", features = ["rwh_05"] }
winit_input_helper = "0.16.0"

[features]
default = ["console_error_panic_hook"]
