[package]
name = "nesilk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "silknes"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "silknes_web"
path = "src/main_web.rs"

[dependencies]
eframe = "0.27.2"
egui_extras = { version = "0.27.2", features = ["image"] }
getrandom = { version = "0.2", features = ["js"] }
lazy_static = "1.4.0"
log = "0.4"
rand = { version = "0.8.5" }
rfd = "0.14.1"
rodio = { version = "0.17.3", features = ["wasm-bindgen"] }
roxmltree = "0.20.0"
serde_json = "1.0"
sha256 = { version = "1.5.0", default-features = false }
web-time = "1.1.0"
winit = { version = "0.29.15", features = ["rwh_05"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
muda = "0.13.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
  "HtmlCanvasElement",
  'CanvasRenderingContext2d',
]}

